# epcuk2

./: .gitignore  LICENSE  README.md  TODO.md
doc/: Doxyfile
doc/html/: annotated.html  ci__epuck2__encoder__sensor_8cpp.html  ci__epuck2__encoder__sensor_8cpp__incl.map  ci__epuck2__encoder__sensor_8cpp__incl.md5  ci__epuck2__encoder__sensor_8h.html  ci__epuck2__encoder__sensor_8h__dep__incl.map  ci__epuck2__encoder__sensor_8h__dep__incl.md5  ci__epuck2__encoder__sensor_8h__incl.map  ci__epuck2__encoder__sensor_8h__incl.md5  ci__epuck2__encoder__sensor_8h_source.html  ci__epuck2__ground__sensor_8cpp.html  ci__epuck2__ground__sensor_8cpp__incl.map  ci__epuck2__ground__sensor_8cpp__incl.md5  ci__epuck2__ground__sensor_8h.html  ci__epuck2__ground__sensor_8h__dep__incl.map  ci__epuck2__ground__sensor_8h__dep__incl.md5  ci__epuck2__ground__sensor_8h__incl.map  ci__epuck2__ground__sensor_8h__incl.md5  ci__epuck2__ground__sensor_8h_source.html  ci__epuck2__leds__actuator_8cpp.html  ci__epuck2__leds__actuator_8cpp__incl.map  ci__epuck2__leds__actuator_8cpp__incl.md5  ci__epuck2__leds__actuator_8h.html  ci__epuck2__leds__actuator_8h__dep__incl.map  ci__epuck2__leds__actuator_8h__dep__incl.md5  ci__epuck2__leds__actuator_8h__incl.map  ci__epuck2__leds__actuator_8h__incl.md5  ci__epuck2__leds__actuator_8h_source.html  ci__epuck2__light__sensor_8cpp.html  ci__epuck2__light__sensor_8cpp__incl.map  ci__epuck2__light__sensor_8cpp__incl.md5  ci__epuck2__light__sensor_8h.html  ci__epuck2__light__sensor_8h__dep__incl.map  ci__epuck2__light__sensor_8h__dep__incl.md5  ci__epuck2__light__sensor_8h__incl.map  ci__epuck2__light__sensor_8h__incl.md5  ci__epuck2__light__sensor_8h_source.html  ci__epuck2__proximity__sensor_8cpp.html  ci__epuck2__proximity__sensor_8cpp__incl.map  ci__epuck2__proximity__sensor_8cpp__incl.md5  (+453 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+15 more)
doc/media/: aboutThisFolder
examples/: CMakeLists.txt  README.md
examples/src/: CMakeLists.txt
examples/src/controllers/: CMakeLists.txt
examples/src/controllers/air_resistance/: CMakeLists.txt  air_resistance.cpp  air_resistance.h
examples/src/controllers/epuck2_airResistance/: CMakeLists.txt  epuck2_airResistance.cpp  epuck2_airResistance.h
examples/src/controllers/epuck2_battery/: CMakeLists.txt  epuck2_battery.cpp  epuck2_battery.h
examples/src/controllers/epuck2_camera/: CMakeLists.txt  epuck2_camera.cpp  epuck2_camera.h
examples/src/controllers/epuck2_encoders/: CMakeLists.txt  epuck2_encoders.cpp  epuck2_encoders.h
examples/src/controllers/epuck2_ground/: CMakeLists.txt  epuck2_ground.cpp  epuck2_ground.h
examples/src/controllers/epuck2_leds/: CMakeLists.txt  epuck2_leds.cpp  epuck2_leds.h
examples/src/controllers/epuck2_lua/: epuck2_lua.lua
examples/src/controllers/epuck2_sensors/: CMakeLists.txt  epuck2_sensors.cpp  epuck2_sensors.h
examples/src/controllers/epuck2_swarm/: CMakeLists.txt  epuck2_swarm.cpp  epuck2_swarm.h
examples/src/controllers/wind_aware/: CMakeLists.txt  wind_aware_air_resistance.cpp
examples/src/experiments/: airResistance.argos  airResistance_blocked_vs_unblocked.argos  airResistance_foot_bot_blocking.argos  airResistance_three_in_row.argos  airResistance_two_no_block.argos  airResistance_two_with_block.argos  airResistance_with_blocking.argos  epuck2_airResistance.argos  epuck2_battery.argos  epuck2_camera.argos  epuck2_encoders.argos  epuck2_ground.argos  epuck2_leds.argos  epuck2_lua.argos  epuck2_sensors.argos  epuck2_swarm.argos  wind_crab_footbot.argos
examples/src/loop_functions/: CMakeLists.txt
examples/src/loop_functions/sensors_loop_functions/: CMakeLists.txt  sensors_loop_functions.cpp  sensors_loop_functions.h
examples/src/loop_functions/swarm_loop_functions/: CMakeLists.txt  swarm_loop_functions.cpp  swarm_loop_functions.h
examples/src/loop_functions/wind_loop_functions/: CMakeLists.txt  wind_loop_functions.cpp  wind_loop_functions.h  wind_qt_user_functions.cpp  wind_qt_user_functions.h
src/: CMakeLists.txt
src/cmake/: ARGoSPackaging.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/e-puck2/: CMakeLists.txt
src/plugins/robots/e-puck2/control_interface/: ci_epuck2_encoder_sensor.cpp  ci_epuck2_encoder_sensor.h  ci_epuck2_ground_sensor.cpp  ci_epuck2_ground_sensor.h  ci_epuck2_leds_actuator.cpp  ci_epuck2_leds_actuator.h  ci_epuck2_light_sensor.cpp  ci_epuck2_light_sensor.h  ci_epuck2_proximity_sensor.cpp  ci_epuck2_proximity_sensor.h  ci_epuck2_tof_sensor.cpp  ci_epuck2_tof_sensor.h
src/plugins/robots/e-puck2/simulator/: dynamics2d_epuck2_model.cpp  dynamics2d_epuck2_model.h  epuck2_battery_default_sensor.cpp  epuck2_battery_default_sensor.h  epuck2_battery_equipped_entity.cpp  epuck2_battery_equipped_entity.h  epuck2_camera_equipped_entity.cpp  epuck2_camera_equipped_entity.h  epuck2_colored_blob_perspective_camera_default_sensor.cpp  epuck2_colored_blob_perspective_camera_default_sensor.h  epuck2_encoder_default_sensor.cpp  epuck2_encoder_default_sensor.h  epuck2_encoder_equipped_entity.cpp  epuck2_encoder_equipped_entity.h  epuck2_entity.cpp  epuck2_entity.h  epuck2_ground_rotzonly_sensor.cpp  epuck2_ground_rotzonly_sensor.h  epuck2_led_default_actuator.cpp  epuck2_led_default_actuator.h  epuck2_led_equipped_entity.cpp  epuck2_led_equipped_entity.h  epuck2_light_default_sensor.cpp  epuck2_light_default_sensor.h  epuck2_proximity_default_sensor.cpp  epuck2_proximity_default_sensor.h  epuck2_tof_default_sensor.cpp  epuck2_tof_default_sensor.h  epuck2_tof_equipped_entity.cpp  epuck2_tof_equipped_entity.h  qtopengl_epuck2.cpp  qtopengl_epuck2.h
